@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:21', checksum=1296573449
-rlzi,loss_type,unit,mean,stddev
+# generated_by='OpenQuake engine 3.6.0-gite56a4a24b3', start_date='2019-06-17T10:08:19', checksum=1296573449
+rlz_id,loss_type,unit,mean,stddev
 0,structural,USD,4.322254E+02,1.868645E+02
