@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:22', checksum=3257945774
-rlzi,loss_type,unit,mean,stddev
+# generated_by='OpenQuake engine 3.6.0-gite56a4a24b3', start_date='2019-06-17T10:08:20', checksum=3257945774
+rlz_id,loss_type,unit,mean,stddev
 0,structural,USD,1.010000E+03,3.158832E+03
