@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:28', checksum=486158159
-rlzi,loss_type,unit,mean,stddev
-0,structural,USD,1.370413E+07,5.312043E+06
+# generated_by='OpenQuake engine 3.6.0-gite56a4a24b3', start_date='2019-06-17T10:08:26', checksum=486158159
+rlz_id,loss_type,unit,mean,stddev
+0,structural,USD,1.370413E+07,5.312044E+06
