@@ -1,4 +1,4 @@
-# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:30', checksum=2307593317
-rlzi,loss_type,unit,mean,stddev
+# generated_by='OpenQuake engine 3.6.0-gite56a4a24b3', start_date='2019-06-17T10:08:28', checksum=2307593317
+rlz_id,loss_type,unit,mean,stddev
 0,structural,USD,1.676968E+03,1.660424E+03
 1,structural,USD,6.581619E+02,5.499982E+02
